# shqq

./: .gitignore  README  shqq.cabal
System/: ShQQ.hs
examples/: dupe.hs
