name:                shqq
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            FIXME
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
build-type:          Simple
cabal-version:       >=1.6
description:
    FIXME

extra-source-files:
    README

library
  exposed-modules:
      System.ShQQ
  ghc-options:      -Wall
  build-depends:
      base             >= 3 && < 5
    , template-haskell >= 2.3
    , process          >= 1.0
    , shell-escape     >= 0.1
    , parsec           >= 3.1

  other-extensions:
      TemplateHaskell
    , CPP

source-repository head
    type:     git
    location: git://github.com/kmcallister/shqq
